feat: CRUD Serviço
