# app/app/Modules/Servico/Requests/ObterUmPorUuidRequest.php
@@ -1,0 +1,36 @@
+<?php
+
+namespace App\Modules\Servico\Requests;
+
+use Illuminate\Foundation\Http\FormRequest;
+use Symfony\Component\HttpFoundation\Response;
+use Illuminate\Contracts\Validation\Validator;
+use Illuminate\Http\Exceptions\HttpResponseException;
+
+class ObterUmPorUuidRequest extends FormRequest
+{
+    protected $stopOnFirstFailure = true;
+
+    protected function uuid(): string
+    {
+        return (string) $this->route('uuid');
+    }
+
+    public function prepareForValidation(): void
+    {
+        $this->merge(['uuid' => $this->route('uuid')]);
+    }
+
+    public function rules(): array
+    {
+        return ['uuid' => ['required', 'uuid', 'exists:servicos,uuid']];
+    }
+
+    public function failedValidation(Validator $validator): void
+    {
+        throw new HttpResponseException(response()->json([
+            'message'   => 'Erros de validação',
+            'errors'    => $validator->errors()->all(),
+        ], Response::HTTP_BAD_REQUEST));
+    }
+}
